--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,31 @@
         android:id="@+id/search_bar"
         android:queryHint="Search here"
         android:iconifiedByDefault="false"/>
-
-    <ListView
-        android:id="@+id/lview"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content">
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lview">
+            </ListView>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                app:useCompatPadding="true"
+                android:clickable="true"
+                app:srcCompat="@drawable/ic_add_24px" />
+
+
+
+    </RelativeLayout>
+
+
 
 </LinearLayout>
